# regot-cuda

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
curegot/: __init__.py  _cuda_loader.py
src/: bindings.cpp  linsolve.cu  linsolve.h  sinkhorn.h  sinkhorn_bcd_kernel.cu  sinkhorn_splr.cu  sinkhorn_splr_kernel.cu  sinkhorn_splr_kernel_line_search.cu  sinkhorn_splr_kernel_low_rank.cu  solvers.h  solvers_numpy.cpp  solvers_torch.cpp  tests.cpp  timer.h  utils.cu  utils.h
test/: test_csr.py  test_sinkhorn_bcd.py  test_sinkhorn_splr.py  test_sparse_cholesky.py
