[project]
name = "curegot"
version = "0.1.0"
description = "CUDA-Accelerated Regularized Optimal Transport"
authors = [
    {name = "Yixuan Qiu", email = "yixuanq@gmail.com"},
]
maintainers = [
    {name = "Yixuan Qiu", email = "yixuanq@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "numpy >= 1.23.0"
]

[project.urls]
Homepage = "https://github.com/yixuan/regot-cuda"
Issues = "https://github.com/yixuan/regot-cuda/issues"

[build-system]
requires = ["pybind11 ~= 2.13.0", "setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Only build on CPython
build = "cp*"
